--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = ["migrate"]
+
 [dependencies]
 argon2 = "0.5.3"
 axum = { version = "0.7.4", features = ["multipart"] }
@@ -17,8 +20,18 @@ serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.112"
 sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "time"] }
 time = { version = "0.3.31", features = ["serde", "formatting"] }
-tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal", "process"] }
+tokio = { version = "1.35.1", features = [
+    "macros",
+    "rt-multi-thread",
+    "signal",
+    "process",
+] }
 tower = "0.4.13"
 tower-http = { version = "0.5.1", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+migrate = { path = "./migrate" }
+
+[build-dependencies]
+migrate = { path = "./migrate" }
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
