Move to cookie based authentication
While I don't think there is necessarily anything wrong with Bearer tokens, they aren't send along with browser requests for images and audio. There are workarounds for this, but none seem worth the hassle over moving to a cookie.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,4 @@ migrate = { path = "./migrate" }
 [build-dependencies]
 migrate = { path = "./migrate" }
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+tower-cookies = "0.10.0"
