--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2021"
 [workspace]
 members = ["migrate"]
 
+[profile.release]
+lto = true
+codegen-units = 1
+
 [dependencies]
 argon2 = "0.5.3"
 axum = { version = "0.7.4", features = ["multipart"] }
@@ -32,6 +36,9 @@ tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 migrate = { path = "./migrate" }
 tower-cookies = "0.10.0"
+axum_typed_multipart = "0.11.0"
+anyhow = "1.0.79"
+reqwest = "0.11.24"
 
 [build-dependencies]
 migrate = { path = "./migrate" }
