--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ dotenvy = "0.15.7"
 once_cell = "1.19.0"
 rand = "0.8.5"
 regex = "1.10.3"
-rust-embed = "8.2.0"
+rust-embed = { version = "8.2.0", features = ["mime-guess"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.112"
 sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "time"] }
@@ -31,7 +31,7 @@ tokio = { version = "1.35.1", features = [
     "process",
 ] }
 tower = "0.4.13"
-tower-http = { version = "0.5.1", features = ["trace"] }
+tower-http = { version = "0.5.1", features = ["trace", "fs"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 freya-migrate = { path = "./migrate" }
@@ -39,7 +39,12 @@ tower-cookies = "0.10.0"
 axum_typed_multipart = "0.11.0"
 anyhow = "1.0.79"
 reqwest = "0.11.24"
+thiserror = "1.0.56"
 
 [build-dependencies]
 freya-migrate = { path = "./migrate" }
-tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.35.1", features = [
+    "macros",
+    "rt-multi-thread",
+    "process",
+] }
