--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ tokio = { version = "1.35.1", features = [
     "process",
 ] }
 tower = "0.4.13"
-tower-http = { version = "0.5.1", features = ["trace", "fs"] }
+tower-http = { version = "0.5.1", features = ["trace", "fs", "compression-gzip"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 freya-migrate = { path = "./migrate" }
@@ -40,6 +40,7 @@ axum_typed_multipart = "0.11.0"
 anyhow = "1.0.79"
 reqwest = "0.11.24"
 thiserror = "1.0.56"
+tokio-util = { version = "0.7.10", features = ["io"] }
 
 [build-dependencies]
 freya-migrate = { path = "./migrate" }
