--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,14 @@ tokio = { version = "1.35.1", features = [
     "rt-multi-thread",
     "signal",
     "process",
+    "time",
 ] }
 tower = "0.4.13"
-tower-http = { version = "0.5.1", features = ["trace", "fs", "compression-gzip"] }
+tower-http = { version = "0.5.1", features = [
+    "trace",
+    "fs",
+    "compression-gzip",
+] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 freya-migrate = { path = "./migrate" }
