--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,11 +32,7 @@ tokio = { version = "1.35.1", features = [
     "time",
 ] }
 tower = "0.4.13"
-tower-http = { version = "0.5.1", features = [
-    "trace",
-    "fs",
-    "compression-gzip",
-] }
+tower-http = { version = "0.5.1", features = ["trace", "fs"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 freya-migrate = { path = "./migrate" }
