Move SQL to its own module

--- a/migrate/Cargo.toml
+++ b/migrate/Cargo.toml
@@ -8,5 +8,5 @@ license = "ISC"
 
 [dependencies]
 rust-embed = "8.2.0"
-sqlx = { version = "0.7.3", features = ["sqlite"] }
+sqlx = { version = "0.7.3", features = ["sqlite", "macros"] }
 tracing = "0.1.40"
