--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,11 @@ serde_json = "1.0.112"
 sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "time"] }
 time = { version = "0.3.31", features = ["serde", "formatting"] }
 tokio = { version = "1.35.1", features = [
-    "macros",
-    "rt-multi-thread",
-    "signal",
-    "process",
-    "time",
+  "macros",
+  "rt-multi-thread",
+  "signal",
+  "process",
+  "time",
 ] }
 tower = "0.4.13"
 tower-http = { version = "0.5.1", features = ["trace", "fs"] }
@@ -47,10 +47,11 @@ tokio-util = { version = "0.7.10", features = ["io"] }
 [build-dependencies]
 freya-migrate = { path = "./migrate" }
 tokio = { version = "1.35.1", features = [
-    "macros",
-    "rt-multi-thread",
-    "process",
+  "macros",
+  "rt-multi-thread",
+  "process",
 ] }
+sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
 
 [dev-dependencies]
 tempfile = "3.10.1"
