--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,6 @@ license = "ISC"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = ["migrate"]
-
 [profile.release]
 lto = true
 codegen-units = 1
@@ -23,7 +20,12 @@ regex = "1.10.3"
 rust-embed = { version = "8.2.0", features = ["mime-guess"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.112"
-sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "time"] }
+sqlx = { version = "0.7.3", features = [
+  "sqlite",
+  "runtime-tokio",
+  "time",
+  "migrate",
+] }
 time = { version = "0.3.31", features = ["serde", "formatting"] }
 tokio = { version = "1.35.1", features = [
   "macros",
@@ -36,7 +38,6 @@ tower = "0.4.13"
 tower-http = { version = "0.5.1", features = ["trace", "fs"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-freya-migrate = { path = "./migrate" }
 tower-cookies = "0.10.0"
 axum_typed_multipart = "0.11.0"
 anyhow = "1.0.79"
@@ -45,13 +46,13 @@ thiserror = "1.0.56"
 tokio-util = { version = "0.7.10", features = ["io"] }
 
 [build-dependencies]
-freya-migrate = { path = "./migrate" }
 tokio = { version = "1.35.1", features = [
   "macros",
   "rt-multi-thread",
   "process",
 ] }
-sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
+sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "migrate"] }
+dotenvy = "0.15.7"
 
 [dev-dependencies]
 tempfile = "3.10.1"
