--- a/web/package.json
+++ b/web/package.json
@@ -16,34 +16,34 @@
 		"@fluent/bundle": "^0.18.0",
 		"@fluent/langneg": "^0.7.0",
 		"@fluent/react": "^0.15.2",
-		"bootstrap": "^5.3.2",
+		"bootstrap": "^5.3.3",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.10",
-		"immer": "^10.0.3",
+		"immer": "^10.0.4",
 		"intl-pluralrules": "^2.0.1",
 		"react": "^18.2.0",
-		"react-bootstrap": "^2.10.0",
+		"react-bootstrap": "^2.10.2",
 		"react-dom": "^18.2.0",
 		"react-icons": "^5.0.1",
-		"swr": "^2.2.4",
+		"swr": "^2.2.5",
 		"use-immer": "^0.9.0",
-		"wouter": "^3.0.0-rc.1",
+		"wouter": "^3.1.2",
 		"zod": "^3.22.4",
-		"zustand": "^4.5.0"
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
-		"@types/react": "^18.2.43",
-		"@types/react-dom": "^18.2.17",
-		"@typescript-eslint/eslint-plugin": "^6.14.0",
-		"@typescript-eslint/parser": "^6.14.0",
+		"@types/react": "^18.2.75",
+		"@types/react-dom": "^18.2.24",
+		"@typescript-eslint/eslint-plugin": "^7.6.0",
+		"@typescript-eslint/parser": "^7.6.0",
 		"@vitejs/plugin-react": "^4.2.1",
-		"eslint": "^8.55.0",
+		"eslint": "^8.56.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.5",
+		"eslint-plugin-react-refresh": "^0.4.6",
 		"prettier": "^3.2.5",
-		"sass": "^1.70.0",
-		"typescript": "^5.2.2",
-		"vite": "^5.0.8"
+		"sass": "^1.74.1",
+		"typescript": "^5.4.5",
+		"vite": "^5.2.8"
 	}
 }
